[package]
name = "lib-reth"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[lib]
name = "lib_reth"
path = "src/lib.rs"

[dependencies]
# reth
reth-provider = { git = "https://github.com/paradigmxyz/reth", version = "1.6.0", tag = "v1.6.0", optional = true }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", version = "1.6.0", tag = "v1.6.0", optional = true }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", version = "1.6.0", tag = "v1.6.0", optional = true }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", version = "1.6.0", tag = "v1.6.0", optional = true }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", version = "1.6.0", tag = "v1.6.0", optional = true }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", version = "1.6.0", tag = "v1.6.0", optional = true }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", version = "1.6.0", tag = "v1.6.0", optional = true }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", version = "1.6.0", tag = "v1.6.0", optional = true }
reth-db = { git = "https://github.com/paradigmxyz/reth", version = "1.6.0", tag = "v1.6.0", optional = true, default-features = false, features = [
    "mdbx",
] }
reth-revm = { git = "https://github.com/paradigmxyz/reth", version = "1.6.0", tag = "v1.6.0", optional = true }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", version = "1.6.0", tag = "v1.6.0", optional = true }
reth-node-types = { git = "https://github.com/paradigmxyz/reth", version = "1.6.0", tag = "v1.6.0", optional = true }

# alloy
alloy-provider = { version = "1.0.23", default-features = false, features = [
    "ipc",
    "ws",
    "pubsub",
    "reqwest",
] }
alloy-rpc-client = { version = "1.0.23", default-features = false, features = [
    "ipc",
    "ws",
    "pubsub",
] }
alloy-network = { version = "1.0.23", default-features = false }
alloy-rpc-types = { version = "1.0.23", default-features = false, features = [
    "eth",
] }
alloy-rpc-types-eth = { version = "1.0.23", default-features = false }
alloy-consensus = { version = "1.0.23", default-features = false }
alloy-primitives = { version = "1.3.0", default-features = false }

# revm
revm = { version = "27.0.3", features = [
    "std",
    "secp256k1",
    "optional_balance_check",
    "optional_block_gas_limit",
], default-features = false }
revm-database = { version = "7.0.1", default-features = false }

# async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.11"
futures = "0.3"

# misc
eyre = "0.6.5"
exe-runners = { git = "https://github.com/jnoorchashm37/exe-runners", features = [
    "reth-tasks",
] }

[dev-dependencies]
tokio-stream = "0.1"
serial_test = "3.1"


[features]
default = ["full"]
full = ["ipc", "ws", "reth-libmdbx-revm"]

ipc = []
ws = []

rayon = ["exe-runners/rayon"]


reth-libmdbx-revm = ["revm", "libmdbx", "dep:reth-rpc-eth-api", "dep:reth-revm"]

revm = ["revm-database/alloydb"]
libmdbx = [
    "dep:reth-provider",
    "dep:reth-rpc",
    "dep:reth-transaction-pool",
    "dep:reth-tasks",
    "dep:reth-network-api",
    "dep:reth-node-ethereum",
    "dep:reth-chainspec",
    "dep:reth-rpc-eth-types",
    "dep:reth-db",
    "dep:reth-node-types",
]
