[package]
name = "lib-reth"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[lib]
name = "lib_reth"
path = "src/lib.rs"

[dependencies]

# reth
reth-provider = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true, features = [
    "serde",
] }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true, features = [
    "serde",
    "serde-bincode-compat",
    "reth-codec",
    "alloy-compat",
] }
reth-db = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true, default-features = false, features = [
    "mdbx",
] }
reth-revm = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-node-types = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
uniswap-storage = { git = "https://github.com/jnoorchashm37/uniswap-storage", optional = true }

# alloy
alloy-provider = { version = "1.0.41", default-features = false, features = [
    "ipc",
    "ws",
    "pubsub",
    "reqwest",
] }
alloy-rpc-client = { version = "1.0.41", default-features = false, features = [
    "ipc",
    "ws",
    "pubsub",
] }
alloy-network = { version = "1.0.41", default-features = false }
alloy-rpc-types = { version = "1.0.41", default-features = false, features = [
    "eth",
] }
alloy-rpc-types-eth = { version = "1.0.41", default-features = false }
alloy-consensus = { version = "1.0.41", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false }

# revm
revm = { version = "33.1.0", features = [
    "std",
    "secp256k1",
    "optional_balance_check",
    "optional_block_gas_limit",
    "c-kzg",
], default-features = false }
revm-database = { version = "9.0.5", default-features = false }

# async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.11"
futures = "0.3"
async-trait = { version = "0", optional = true }

# misc
eyre = "0.6.5"
exe-runners = { git = "https://github.com/jnoorchashm37/exe-runners", features = [
    "reth-tasks",
] }

[dev-dependencies]
tokio-stream = "0.1"
serial_test = "3.1"


[features]
default = ["full"]
full = ["ipc", "ws", "reth-libmdbx-revm", "uniswap-storage", "op-reth"]


ipc = []
ws = []

rayon = ["exe-runners/rayon"]

op-reth = ["dep:reth-optimism-chainspec", "dep:reth-optimism-primitives"]


reth-libmdbx-revm = ["revm", "libmdbx", "dep:reth-rpc-eth-api", "dep:reth-revm"]

revm = ["revm-database/alloydb"]
libmdbx = [
    "dep:reth-provider",
    "dep:reth-rpc",
    "dep:reth-transaction-pool",
    "dep:reth-tasks",
    "dep:reth-network-api",
    "dep:reth-node-ethereum",
    "dep:reth-chainspec",
    "dep:reth-rpc-eth-types",
    "dep:reth-db",
    "dep:reth-node-types",
]

uniswap-storage = ["dep:uniswap-storage", "dep:async-trait"]
