[package]
name = "lib-reth"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[lib]
name = "lib_reth"
path = "src/lib.rs"

[dependencies]

# reth
reth-provider = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true, features = [
    "serde",
    "superchain-configs",

] }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true, features = [
    "serde",
    "serde-bincode-compat",
    "reth-codec",
    "rpc-compat",
    "op",
] }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true, features = [
    "serde",
    "serde-bincode-compat",
    "reth-codec",
    "alloy-compat",
] }
reth-db = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true, default-features = false, features = [
    "mdbx",
    "op",
] }
reth-revm = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
reth-node-types = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", optional = true }
uniswap-storage = { git = "https://github.com/jnoorchashm37/uniswap-storage", optional = true }

# alloy
alloy-provider = { version = "1.0.41", default-features = false, features = [
    "ipc",
    "ws",
    "pubsub",
    "reqwest",
] }
alloy-rpc-client = { version = "1.0.41", default-features = false, features = [
    "ipc",
    "ws",
    "pubsub",
] }
alloy-network = { version = "1.0.41", default-features = false }
alloy-rpc-types = { version = "1.0.41", default-features = false, features = [
    "eth",
] }
alloy-rpc-types-eth = { version = "1.0.41", default-features = false }
alloy-consensus = { version = "1.0.41", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false }
alloy-transport = { version = "1.0.41", default-features = false, optional = true }
alloy-eips = { version = "1.0.41", default-features = false, optional = true }
op-alloy-network = { version = "0.22.1", optional = true }
op-alloy-consensus = { version = "0.22.1", optional = true }


# revm
revm = { version = "33.1.0", features = [
    "std",
    "secp256k1",
    "optional_balance_check",
    "optional_block_gas_limit",
    "c-kzg",
], default-features = false }
revm-database = { version = "9.0.5", default-features = false, features = [
    "alloydb",
] }

# async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.11"
futures = "0.3"
async-trait = { version = "0", optional = true }

# misc
eyre = "0.6.5"
exe-runners = { git = "https://github.com/jnoorchashm37/exe-runners", features = [
    "reth-tasks",
] }
jsonrpsee-types = { version = "0.26.0", optional = true }

[dev-dependencies]
tokio-stream = "0.1"
serial_test = "3.1"


[features]
default = ["full"]
full = ["ipc", "ws", "uniswap-storage", "revm", "reth-libmdbx"]


ipc = []
ws = []

rayon = ["exe-runners/rayon"]


revm = ["reth-libmdbx", "dep:reth-rpc-eth-api", "dep:reth-revm"]

op-reth-libmdbx = [
    "reth-libmdbx",
    "dep:reth-optimism-chainspec",
    "dep:reth-optimism-primitives",
    "dep:reth-optimism-node",
    "dep:reth-optimism-evm",
    "dep:reth-optimism-rpc",
    "dep:op-alloy-network",
    "dep:op-alloy-consensus",
]

reth-libmdbx = [
    "dep:reth-provider",
    "dep:reth-rpc",
    "dep:reth-transaction-pool",
    "dep:reth-tasks",
    "dep:reth-network-api",
    "dep:reth-node-ethereum",
    "dep:reth-chainspec",
    "dep:reth-rpc-eth-types",
    "dep:reth-db",
    "dep:reth-node-types",
    "dep:reth-primitives-traits",
    "dep:reth-optimism-primitives",
    "dep:alloy-transport",
    "dep:alloy-eips",
    "dep:reth-storage-api",
    "dep:jsonrpsee-types",
]

uniswap-storage = ["dep:uniswap-storage", "dep:async-trait"]
